<resources>
    <string name="app_name">DevInterview</string>
    <string name="testing_choose">Тип тестирования</string>
    <string name="tickets">Билеты</string>
    <string name="exam">Экзамен</string>
    <string name="developer_interview">Developer Interview</string>
    <string name="theme_app">Тема приложения</string>
    <string name="theme_change">Смена темы</string>
    <string name="statistics_app">Статистика приложения</string>
    <string name="reset_progress">Сбросить прогресс</string>
    <string name="notifications">Уведомления</string>
    <string name="to_configure">Настроить</string>
    <string name="other">Прочее</string>
    <string name="feedback">Обратная связь</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="version_app">Версия приложения:</string>
    <string name="_0_0_1">0.0.1</string>
    <string name="daily_reminders">Ежеденевные напоминания</string>
    <string name="notification_time">Время уведомлений</string>
    <string name="for_all_questions">По всем вопросам</string>
    <string name="first_java_oop_oop"><a href="https://javarush.ru/groups/posts/principy-oop">Принципы ООП</a></string>
    <string name="second_java_oop"><a href="https://javarush.ru/groups/posts/1969-principih-inkapsuljacii">Инкапсуляция</a></string>
    <string name="third_java_oop"><a href="https://metanit.com/java/tutorial/3.5.php">Наследование</a></string>
    <string name="fourth_java_oop"><a href="https://javarush.ru/groups/posts/polimorfizm-v-java">Полиморфизм</a></string>
    <string name="fifth_java_oop"><a href="https://vertex-academy.com/tutorials/ru/samouchitel-po-java-s-nulya/">Особенности в Java</a></string>
    <string name="second_java_variable"><a href="https://vertex-academy.com/tutorials/ru/sozdanie-peremennyx-i-tipy-peremenny/">Переменные</a></string>
    <string name="third_java_variable"><a href="https://javarush.ru/groups/posts/massivy-java">Массивы</a></string>
    <string name="fourth_java_variable"><a href="https://javarush.ru/groups/posts/2496-podrobnihy-razbor-klassa-hashmap">Хеш-структуры</a></string>
    <string name="fifth_java_variable"><a href="https://upread.ru/art.php?id=986">Связные списки</a></string>
    <string name="first_java_variable"><a href="https://proglib.io/p/8-data-structures">Основные структуры</a></string>
    <string name="first_java_lesson"><a href="https://stepik.org/course/187/promo">Особенности Java</a></string>
    <string name="second_java_lesson"><a href="https://javarush.ru/">Краткое изложение</a></string>
    <string name="third_java_lesson"><a href="https://metanit.com/java/tutorial/1.1.php">Курс для начинающих</a></string>
    <string name="first_python_oop"><a href="https://proglib.io/p/python-oop">Принципы ООП</a></string>
    <string name="second_python_oop"><a href="https://habr.com/ru/post/444338/">Инкапсуляция</a></string>
    <string name="third_python_oop"><a href="https://ru.hexlet.io/courses/python-oop-basics/lessons/inheritance/theory_unit">Наследование</a></string>
    <string name="fourth_python_oop"><a href="https://habr.com/ru/post/552922/">Полиморфизм</a></string>
    <string name="fifth_python_oop"><a href="https://pythonchik.ru/osnovy/osnovy-oop-v-python-klassy-obekty-metody">Особенности в Python</a></string>
    <string name="first_python_variable"><a href="https://metanit.com/python/tutorial/2.2.php">Основные структуры</a></string>
    <string name="third_python_variable"><a href="https://pythonworld.ru/tipy-dannyx-v-python/spiski-list-funkcii-i-metody-spiskov.html">Списки</a></string>
    <string name="fourth_python_variable"><a href="https://pythonworld.ru/tipy-dannyx-v-python/kortezhi-tuple.html">Кортежи</a></string>
    <string name="fifth_python_variable"><a href="https://habr.com/ru/company/otus/blog/470828/">Связные списки</a></string>
    <string name="second_python_variable"><a href="https://metanit.com/python/tutorial/2.2.php">Переменные</a></string>
    <string name="first_python_lesson"><a href="https://stepik.org/course/67/promo">Особенности Python</a></string>
    <string name="second_python_lesson"><a href="https://habr.com/ru/post/29778/">Краткое изложение</a></string>
    <string name="third_python_lesson"><a href="https://ru.code-basics.com/languages/python">Курс для начинающих</a></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_08_45_pm">08:45 PM</string>
    <string name="select_time">Выберите время</string>
    <string name="set_notification_time">Назначить уведомления</string>
    <string name="off_notifications">Выключить уведомления</string>
    <string name="profile">Profile</string>
    <string name="education">Education</string>
    <string name="exams">Exams</string>
    <string name="testing">Testing</string>
    <string name="_1">1</string>
    <string name="choose_language">Выберите язык</string>
    <string name="java">Java</string>
    <string name="python">Python</string>
    <string name="notification">Уведомления</string>
    <string name="dinara_link"><a href="https://vk.com/dinozavrog">Зарипова Динара</a></string>
    <string name="andrew_link"><a href="https://vk.com/w1nway">Бартновский Андрей</a></string>
    <string name="danila_link"><a href="https://vk.com/danilagorlov">Горлов Данила</a></string>
    <string name="pavel_link"><a href="https://vk.com/pidixeev">Пидиксеев Павел</a></string>
    <string name="alina_link"><a href="https://vk.com/ilukida">Васькина Алина</a></string>
    <string name="settings">Настройки</string>
    <string name="in_developing">В разработке…</string>
    <string name="c_plus_plus">C++</string>
    <string name="kotlin">Kotlin</string>
    <string name="php">PHP</string>
    <string name="_00_59">00:59</string>
    <string name="_1_10">1/10</string>
    <string name="question_will_be_here">Вопрос будет здесь</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="next_question">Следующий вопрос</string>
</resources>