<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingTop="0dp"
    android:paddingEnd="10dp"
    android:paddingBottom="350dp" >

    <TextView
        android:id="@+id/tv_for_all_questions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:scaleType="centerCrop"
        android:text="@string/for_all_questions"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/tv_link_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_link_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/dinara_link"
        app:layout_constraintBottom_toTopOf="@id/tv_link_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_for_all_questions" />

    <TextView
        android:id="@+id/tv_link_two"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/andrew_link"
        app:layout_constraintBottom_toTopOf="@id/tv_link_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_link_one" />

    <TextView
        android:id="@+id/tv_link_three"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/danila_link"
        app:layout_constraintBottom_toTopOf="@id/tv_link_four"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_link_two" />

    <TextView
        android:id="@+id/tv_link_four"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/pavel_link"
        app:layout_constraintBottom_toTopOf="@id/tv_link_five"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_link_three" />

    <TextView
        android:id="@+id/tv_link_five"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/alina_link"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_link_four" />

</androidx.constraintlayout.widget.ConstraintLayout>