<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Chronometer
        android:id="@+id/tv_timer"
        style="@style/Chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:text="@string/_00_59"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_questions"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_back_white_10"
        android:gravity="center"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/_1_10"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:gravity="center"
        android:minHeight="100dp"
        android:padding="20dp"
        android:text="@string/question_will_be_here"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_questions" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/acb_option_first"
        style="@style/TextViewExamAndTickets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="40dp"
        android:minHeight="50dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/option_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_question" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/acb_option_second"
        style="@style/TextViewExamAndTickets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:minHeight="50dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/option_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/acb_option_first" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/acb_option_third"
        style="@style/TextViewExamAndTickets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:minHeight="50dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/option_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/acb_option_second" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/acb_option_fourth"
        style="@style/TextViewExamAndTickets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:minHeight="50dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/option_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/acb_option_third" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:text="@string/next_question"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/acb_option_fourth" />

</androidx.constraintlayout.widget.ConstraintLayout>